<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.BerandaFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp">

                <LinearLayout
                    android:id="@+id/lyt_pilih_kota_asal"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/title_pilih_kota_asal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="8pt"
                    android:text="@string/text_pilih_kota_asal"/>

                    <Spinner
                        android:id="@+id/spin_kota_asal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyt_pilih_kota_tujuan"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/title_pilih_kota_tujuan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="8pt"
                        android:text="@string/text_pilih_kota_tujuan"/>

                    <Spinner
                        android:id="@+id/spin_kota_tujuan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyt_pilih_tanggal_perjalanan"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/title_pilih_tanggal_perjalanan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="8pt"
                        android:text="@string/text_pilih_tanggal_perjalanan"/>
                    <EditText
                        android:id="@+id/val_tanggal_perjalanan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_tanggal_perjalanan"
                        android:textColorHint="@color/colorPrimary"
                        android:clickable="true"
                        android:editable="false"
                        android:focusable="false"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyt_pilih_waktu_berangkat"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:id="@+id/title_pilih_waktu_berangkat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="8pt"
                        android:text="@string/text_pilih_waktu_berangkat"/>

                    <Spinner
                        android:id="@+id/spin_waktu_berangkat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lyt_btn_cari_travel"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_cari_travel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorPrimary"
                        android:text="@string/btn_cari_travel"
                        android:textAllCaps="false"
                        android:textSize="8pt"
                        android:textStyle="normal"
                        android:textColor="@color/colorWhite"/>
                </LinearLayout>


                <LinearLayout
                    android:id="@+id/lyt_space_iklan"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/colorGrey">

                   <TextView
                       android:layout_marginTop="20dp"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       android:text="@string/ads_space"
                       android:textAllCaps="true"
                       android:textAlignment="center"
                       android:gravity="center"
                       android:layout_gravity="center"/>

                </LinearLayout>
            </LinearLayout>


        </ScrollView>






    </RelativeLayout>

</FrameLayout>